fix item list dark mode style

--- a/web/styles.css
+++ b/web/styles.css
@@ -321,6 +321,10 @@ body,
 		}
 	}
 }
+.bp5-dark .bp5-card-list {
+	width: initial !important;
+	margin: initial !important;
+}
 
 /* dialog */
 .bp5-dialog {
